# String

./: .gitignore  CMakeLists.txt  README.md
cmake/: update_vs_2022.cmd
src/: Test.cpp  Test.h  main.cpp  pch.h
src/ai/: String.cpp  String.h
